fix: header 3 margin overlaps code folding header

--- a/_extensions/soles/theme.scss
+++ b/_extensions/soles/theme.scss
@@ -113,7 +113,7 @@ $code-block-font-size: 0.7em;
   // font-style: italic;
   font-weight: 900;
   margin-top: 1.25em;
-  margin-bottom: -1em;
+  // margin-bottom: -1em;
 }
 
 .reveal h4 {
